--- a/src/routes/__common/index.module.scss
+++ b/src/routes/__common/index.module.scss
@@ -3,10 +3,11 @@
   background-color: var(--kansoku-primary-color);
   display: flex;
   align-items: center;
-  padding: 0 16px;
+  padding: 0 30px;
   color: #fff;
   font-size: 20px;
   font-weight: bold;
+  justify-content: space-between;
 }
 .titleSpan {
   cursor: pointer;
