--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,21 @@
   /* --semi-color-secondary */
   --kansoku-primary-color: rgba(0, 149, 238, 1);
 }
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  color: var(--semi-color-text-0);
+  background-color: var(--semi-color-bg-0);
+}
+
+p {
+  margin: 0;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
