feat: 新增免责声明

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@ body {
 
   /* 变量 */
   --kansoku-primary-color: var(--semi-color-secondary);
+  --kansoku-grey-color: rgba(28, 30, 35, 0.6);
 }
 
 p {
