feat: 切换颜色到主题色

--- a/src/routes/__common/index.module.scss
+++ b/src/routes/__common/index.module.scss
@@ -1,6 +1,6 @@
 .header {
   height: 60px;
-  background-color: var(--kansoku-primary-color);
+  background-color: var(--semi-color-primary);
   display: flex;
   align-items: center;
   padding: 0 30px;
