--- a/src/routes/__common/index.module.scss
+++ b/src/routes/__common/index.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   padding: 0 30px;
-  color: #fff;
+  color: var(--semi-color-bg-0);
   font-size: 20px;
   font-weight: bold;
   justify-content: space-between;
