--- a/src/components/StepNode/index.module.scss
+++ b/src/components/StepNode/index.module.scss
@@ -1,8 +1,8 @@
 .step-container {
-  background-color: red;
-  padding: 6px;
+  padding: 0 20px;
   overflow: auto;
+  // background-color: var(--semi-color-fill-0);
 }
 .canvas-container {
-  background-color: green;
+  position: relative;
 }
