--- a/src/routes/__common/components/header/index.module.scss
+++ b/src/routes/__common/components/header/index.module.scss
@@ -8,4 +8,9 @@
   font-size: 20px;
   font-weight: bold;
   justify-content: space-between;
+  :global {
+    .semi-spin-wrapper {
+      color: red;
+    }
+  }
 }
